Minor change to some exercises way of loading JSAV

--- a/Exercises/Development/listLStackPush.html
+++ b/Exercises/Development/listLStackPush.html
@@ -12,7 +12,7 @@ Written by Junyang Chen and Cliff Shaffer
   <script src="../../JSAV/lib/jquery.transform.light.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
   <script src="../../lib/odsaLoadKhan.js"></script>
-  <script src="../../JSAV/build/JSAV.js"></script>
+  <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 
   <style>
