Remove 'Practicing' from Ka exercise title.

--- a/ODSAkhan-exercises-new/exercises/khan-site.html
+++ b/ODSAkhan-exercises-new/exercises/khan-site.html
@@ -13,7 +13,7 @@
                         <article class="exercises-content clearfix">
                         <div class="exercises-header"><h2 class="section-headline">
                                 <div class="topic-exercise-badge">&nbsp;</div>
-                                <span class="practice-exercise-topic-context">Practicing</span>
+                                <span class="practice-exercise-topic-context"></span>
                             <span style = "margin-right:100px;"></span>
                             <span id = 'points-area'>
                                 <span style = "font-size:60%">Current score:&nbsp;</span>
