OpenPop Exercises should define their back end server in global variable 'serverOverride'.

--- a/Exercises/Development/LinkedListKAEx.html
+++ b/Exercises/Development/LinkedListKAEx.html
@@ -6,6 +6,10 @@
   </script>
   <script src="../../lib/jquery-ui.min.js">
   </script>
+  <script>
+    window.serverOverride = "http://opendsa.cc.vt.edu/openpop/backend";
+    window.OpenPopKa = true;
+  </script>
   <script src = "../../lib/odsaLoadKhan.js"></script>
   <style>
     #codeTextarea{
