--- a/Exercises/Development/KMP_Users_Choice.html
+++ b/Exercises/Development/KMP_Users_Choice.html
@@ -17,14 +17,14 @@
   <body>
 
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+  <script src="../../lib/jquery.min.js"></script>
+  <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transform.light.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
+  <script src="../../lib/odsaLoadKhan.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
-  <script src="http://algoviz.org/OpenDSA/ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="http://algoviz.org/OpenDSA/JSAV/build/JSAV-min.js"></script> 
   <script src="../../AV/Development/edit.js"></script>
+  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <script>
 
     var kmp_exercise, master_str, sub_str, started, align_table_temp, compares_var, shifts_var;
