--- a/Exercises/Development/Rabin_Karp_Horners_Exercise.html
+++ b/Exercises/Development/Rabin_Karp_Horners_Exercise.html
@@ -16,15 +16,14 @@
     <p class="jsavoutput jsavline"></p>
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+  <script src="../../lib/jquery.min.js"></script>
+  <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transform.light.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
+  <script src="../../lib/odsaLoadKhan.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
-  <script src="http://algoviz.org/OpenDSA/ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="http://algoviz.org/OpenDSA/JSAV/build/JSAV-min.js"></script> 
   <script src="../../AV/Development/edit.js"></script>
-  <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" /> 
+  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <script>
   /*
   Samuel A. Micka
