Revisions for math background chapter content

--- a/Exercises/Development/IntroMCQGoals.html
+++ b/Exercises/Development/IntroMCQGoals.html
@@ -11,12 +11,12 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">Which is NOT a goal of this course?</p>
-      <div class="solution"><var>"Learn to write elegant programs"</var></div>
+      <p class="question">Which is NOT a topic taught by OpenDSA?</p>
+      <div class="solution"><var>"How to write elegant programs"</var></div>
       <ul class="choices">
-	<li><var>"Present commonly used data structures"</var></li>
+	<li><var>"The commonly used data structures"</var></li>
 	<li><var>"Introduce the idea of tradeoffs and reinforce the concept that there are costs and benefits associated with every data structure"</var></li>
-	<li><var>"Teach how to measure the effectiveness of a data structure or algorithm"</var></li>	  	 
+	<li><var>"How to measure the effectiveness of a data structure or algorithm"</var></li>	  	 
       </ul>
     </div> 
   </div>
