--- a/Exercises/Development/IntroMCQselect.html
+++ b/Exercises/Development/IntroMCQselect.html
@@ -11,8 +11,9 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">Which of these is NOT one of the steps to
-      follow when selecting a data structure to solve a problem?</p>
+      <p class="question">Which of these is NOT one of the three
+      standard steps to follow when selecting a data structure to
+      solve a problem?</p>
       <div class="solution"><var>"Run simulations to quantify the expected running time of the program"</var></div>
       <ul class="choices">
 	<li><var>"Analyze your problem to determine the basic operations that must be supported"</var></li>
