Block the page when we are waiting for the respond from the back end in coding exercise.

--- a/Exercises/Development/LinkedListKAEx.html
+++ b/Exercises/Development/LinkedListKAEx.html
@@ -9,6 +9,7 @@
   <script>
     window.OpenPopKa = true;
   </script>
+  <script src = "../../lib/jquery.blockUI.js"></script>
   <script src = "../../lib/odsaLoadKhan.js"></script>
   <style>
     #codeTextarea{
