--- a/Exercises/Development/edit-KA1.html
+++ b/Exercises/Development/edit-KA1.html
@@ -9,10 +9,10 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Edit Distance - Khan Academy 1</title>
   <script src="../../lib/jquery.min.js"></script>
-<script src="../../lib/jquery-ui.min.js"></script>
-  <script src="http://algoviz.org/OpenDSA/ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="http://algoviz.org/OpenDSA/JSAV/build/JSAV-min.js"></script>
-  <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" />  
+  <script src="../../lib/jquery-ui.min.js"></script>
+  <script src="../../lib/odsaLoadKhan.js"></script>
+  <script src="../../JSAV/build/JSAV-min.js"></script>
+  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />  
   <script src="../../AV/Development/edit.js"></script>
 
 <style>
