--- a/Exercises/Development/edit-KA.html
+++ b/Exercises/Development/edit-KA.html
@@ -10,7 +10,7 @@
   <title>Edit Distance - Khan Academy</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
-  <script src="../../lib/khan-exercise.js"></script>
+  <script src="../../lib/odsaLoadKhan.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />  
   <script src="../../AV/edit.js"></script>
