Fixing coding problems

--- a/Exercises/Development/MthBgMCQdskacc.html
+++ b/Exercises/Development/MthBgMCQdskacc.html
@@ -17,11 +17,11 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">Disk drive access time is normally measured in:</p>
-      <div class="solution"><var>Milliseconds (thousandths of a second)</var></div>
+      <div class="solution"><var>"Milliseconds (thousandths of a second)"</var></div>
       <ul class="choices">
-	<li><var>Seconds </var> </li>
-	<li><var>Microseconds (millionths of a second) </var> </li>
-	<li><var>Nanoseconds (billionths of a second)</var></li>	  	 
+	<li><var>"Seconds" </var> </li>
+	<li><var>"Microseconds (millionths of a second)" </var> </li>
+	<li><var>"Nanoseconds (billionths of a second)"</var></li>	  	 
       </ul>
 	  <div class="hints">
        
