--- a/Exercises/Development/MthBgMCQrmacc.html
+++ b/Exercises/Development/MthBgMCQrmacc.html
@@ -18,11 +18,11 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question">RAM access time is normally measured in:</p>
-      <div class="solution"><var> Nanoseconds (billionths of a second)</var></div>
+      <div class="solution"><var> "Nanoseconds (billionths of a second)"</var></div>
       <ul class="choices">
-	<li><var>Seconds </var> </li>
-	<li><var>Microseconds (millionths of a second) </var> </li>
-	<li><var>Milliseconds (thousandths of a second)</var></li>	  	 
+	<li><var>"Seconds" </var> </li>
+	<li><var>"Microseconds (millionths of a second)" </var> </li>
+	<li><var>"Milliseconds (thousandths of a second)"</var></li>	  	 
       </ul>
 	  <div class="hints">
        
