--- a/ODSAkhan-exercises-new/exercises/khan-exercise.html
+++ b/ODSAkhan-exercises-new/exercises/khan-exercise.html
@@ -35,7 +35,7 @@
                     <input class="simple-button green" id="check-answer-button" type="button" value="Check Answer">
                 </div>
                 <input class="simple-button green" id="next-question-button" name="correctnextbutton" style="display:none;" type="button" value="Correct! Next Question...">
-                <div id="positive-reinforcement"><img src="/images/face-smiley.png"></div>
+                <div id="positive-reinforcement"><img src="../../ODSAkhan-exercises-new/images/face-smiley.png"></div>
                 <span id="show-solution-button-container"></span>
                 <div id="check-answer-results"><p class="check-answer-message info-box-sub-description"></p></div>
                 </div>
