Tuning some prerequisites. Set MathJax global font size for KA exercises.

--- a/Exercises/Sorting/BubsortMCQcost.html
+++ b/Exercises/Sorting/BubsortMCQcost.html
@@ -6,7 +6,6 @@
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
 </head>
-
 <body>
 <div class="exercise">
   <div class="problems">
@@ -14,7 +13,7 @@
       <div class="spin">
         <p class="question">What is the {best|average|worst}-case time for
 	  Bubble Sort (as the algorithm is presented in this module)
-	  to sort an array of n records?</p> 
+	  to sort an array of <code>n</code> records?</p> 
       </div>
       <div class="solution"><var><code>\Theta(n^2)</code></var></div>
       <ul class="choices">
