Tuning math background exercises

--- a/Exercises/Development/MthBgMCQperm.html
+++ b/Exercises/Development/MthBgMCQperm.html
@@ -1,32 +1,26 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>OpenDSA Math Bacground Chapter Summary: permutation</title>
-
-</script> 
+  <title>Math Background Chapter Summary: permutation</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
-</script>
-
-
 </head>
-
 
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">The number of different permuations for n numbers is:</p>
+      <p class="question">The number of different permuations
+      for <code>n</code> numbers is:</p>
       <div class="solution"><var><code>n!</code> </var></div>
       <ul class="choices">
 	<li><var><code>n^2</code> </var> </li>
+	<li><var><code>2^n</code> </var> </li>
 	<li><var><code>n^n</code> </var> </li>
 	<li><var><code>n \log n</code> </var></li>	  	 
       </ul>
-	  <div class="hints">
-    </div> 
-
+    </div>
   </div>
 </div>
 </body>
