--- a/Exercises/Development/MthBgMCQbits.html
+++ b/Exercises/Development/MthBgMCQbits.html
@@ -1,40 +1,34 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>OpenDSA Math Bacground Chapter Summary: Largest Value</title>
+  <title>Math Background Chapter Summary: Largest Value</title>
 
-</script> 
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
-</script>
 </head>
-
-
-
 
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">With 32 bits, the largest value that we can express is roughly:</p>
-      <div class="solution"><var> 4,000,000,000</var></div>
-      <ul class="choices">
-	<li><var>1,000 </var> </li>
-	<li><var>1,000,000 </var> </li>
-	<li><var>2,000,000</var></li>	
-        <li><var>4,000,000</var></li>
-        <li><var>4,000,000</var></li>
-        <li><var>1,000,000,000</var></li>	  	 	  	 	  	 	  	 
-        <li><var>2,000,000,000</var></li>
-        <li><var>4,000,000,000</var></li>	  	 	  	 	  	 	  	 
-        <li><var>8,000,000,000</var></li>	  	 	  	 	  	 	  	 
- 	 	  	 
-      </ul>
-	  <div class="hints">
-       
-         </div> 
+      <p class="question">With 32 bits, the largest value that we can
+	express is roughly:</p> 
+      <div class="solution"><var>"4,000,000,000"</var></div>
 
+      <ul class="choices">
+	<li><var>"1,000"</var> </li>
+	<li><var>"1,000,000"</var> </li>
+	<li><var>"2,000,000"</var></li>
+        <li><var>"4,000,000"</var></li>
+        <li><var>"1,000,000,000"</var></li>
+        <li><var>"2,000,000,000"</var></li>
+        <li><var>"8,000,000,000"</var></li>
+      </ul>
+      <div class="hints">
+	<p>Which number is closest to <code>2^{32}</code>?</p>
+      </div>
+    </div>
   </div>
 </div>
 </body>
