--- a/Exercises/Development/MthBgMCQdskacc.html
+++ b/Exercises/Development/MthBgMCQdskacc.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>OpenDSA Math Bacground Chapter Summary: Access time</title>
-
-</script> 
+  <title>Math Background Chapter Summary: Access time</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
-</script>
-
-
 </head>
 
 <body>
@@ -21,12 +16,9 @@
       <ul class="choices">
 	<li><var>"Seconds" </var> </li>
 	<li><var>"Microseconds (millionths of a second)" </var> </li>
-	<li><var>"Nanoseconds (billionths of a second)"</var></li>	  	 
+	<li><var>"Nanoseconds (billionths of a second)"</var></li>
       </ul>
-	  <div class="hints">
-       
-         </div> 
-
+    </div>
   </div>
 </div>
 </body>
