Part of Algorith analysis Excercises

--- a/Exercises/Development/AlgAnlsFIBsmlintgr.html
+++ b/Exercises/Development/AlgAnlsFIBsmlintgr.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>OpenDSA Algorithm Analysis Exercise: Smallest Integer</title>
+  <title>Algorithm Analysis Exercise: Smallest Integer</title>
 
 
   <script src="../../lib/jquery.min.js"></script>
