--- a/Exercises/Development/AlgAnlsFIBsmlintgr2.html
+++ b/Exercises/Development/AlgAnlsFIBsmlintgr2.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>OpenDSA Algorithm Analysis Exercise: Smallest Integer</title>
+  <title>Algorithm Analysis Exercise: Smallest Integer</title>
 
 
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../lib/odsaLoadKhan.js"></script>
-</script>
+
 </head>
 
 
