--- a/Exercises/Development/AlgAnlsTFsqlsrch.html
+++ b/Exercises/Development/AlgAnlsTFsqlsrch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>OpenDSA Algorithm Analysis Exercise: Sequential Search</title>
+  <title>Algorithm Analysis Exercise: Sequential Search</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../lib/odsaLoadKhan.js"></script>
