Changed grader in Radix Trie and Red-black Tree Insertion to 'Finder'.

--- a/AV/Development/radixTrie.html
+++ b/AV/Development/radixTrie.html
@@ -302,7 +302,7 @@
             $.fx.off = oldfx;
         }
 
-        var exercise = av.exercise(modelSolution, initialize, {}, {feedback: "atend"});
+        var exercise = av.exercise(modelSolution, initialize, {}, {feedback: "atend", grader: "finder"});
         exercise.reset();
 
         </script>
