Changed instructions for Insertion Sort.

--- a/AV/Development/insertionSort.html
+++ b/AV/Development/insertionSort.html
@@ -19,7 +19,7 @@
             <!-- <a class="jsavsettings" href="#">Settings</a> -->
             <p class="instructLabel">Instructions:</p>
             <p class="instructions">
-                    Use Insertion Sort to sort the table given below in ascending order. Click on an item to select it and swap its value with another one by clicking again.
+                    Use Insertion Sort to sort the table given below in ascending order. Click on an item to select it and click again on another one to swap these bars.
             </p>
             <p align="center" class="jsavexercisecontrols"></p>
             <p class="jsavscore"></p>
